# Castlevania

./: .gitignore  CMakeLists.txt  README.md
Castlevania/: Animation.cpp  Animation.h  AnimationFrame.h  AnimationManager.cpp  AnimationManager.h  Bat.cpp  Bat.h  BigCandle.cpp  BigCandle.h  Boundary.cpp  Boundary.h  BoundaryFactory.cpp  BoundaryFactory.h  Box.h  Brick.cpp  Brick.h  BrokenWall.cpp  BrokenWall.h  BrokenWallFragment.cpp  BrokenWallFragment.h  Bubble.cpp  Bubble.h  Bubbles.cpp  Bubbles.h  Bullet.cpp  Bullet.h  BurnEffect.cpp  BurnEffect.h  Camera.cpp  Camera.h  Candle.cpp  Candle.h  CandleFactory.cpp  CandleFactory.h  Castlevania.vcxproj  Castlevania.vcxproj.filters  CollisionEffect.cpp  CollisionEffect.h  Constants.h  DaggerSubWeapon.cpp  (+115 more)
Castlevania/Resources/sprites/background/: 123.TXT  testMap.ABD  testMap.CMA  testMap.CSV  testMap.GFX  testMap.TXT
Castlevania/Scenes/: Scene1_map.txt  Scene1_objects.txt  Scene2_objects.txt
Castlevania/Stages/: 2.3_objects.txt  generateBoundary.js  generateStair.js  genrateForceIdle.js  package-lock.json  package.json  stage1.CSV  stage1.FMP  stage1_map.txt  stage1_objects.txt  stage2.1_objects.txt  stage2.2_objects.txt  stage2.3_objects.txt  stage2.CSV  stage2.FMP  stage2_map.txt  stage2_objects.txt  stage2v2.CSV  stage2v2.FMP  stage3.1_objects.txt  stage3_objects.txt  temp.CSV  temp.FMP
Castlevania/init-data/: grids.txt  maps.txt  textures.txt
Castlevania/textures/: BlackLeopard_animations.txt  BlackLeopard_sprites.txt  Boss_animations.txt  Boss_sprites.txt  BreakWall_animations.txt  BreakWall_sprites.txt  Bubbles_animations.txt  Bubbles_sprites.txt  Candle_sprites.txt  Door_animations.txt  Door_anims.txt  Door_sprites.txt  Effect_animations.txt  Effect_sprites.txt  FireBall_animations.txt  FireBall_sprites.txt  FishMan_animations.txt  FishMan_sprites.txt  HP_animations.txt  HP_sprites.txt  IntroObjects_animations.txt  IntroObjects_sprites.txt  Items_anims.txt  Items_sprites.txt  Rect_animations.txt  Rect_sprites.txt  Spark_animations.txt  Spark_sprites.txt  Stair_animations.txt  Stair_sprites.txt  SubWeapons_animations.txt  SubWeapons_sprites.txt  Title_animations.txt  Title_sprites.txt  Untitled-1.psd  VampireBat_animations.txt  VampireBat_sprites.txt  Whip_sprites.txt  YesNo_anims.txt  YesNo_sprites.txt  (+55 more)
