cmake_minimum_required(VERSION 3.15)
project(Castlevania)

set(CMAKE_CXX_STANDARD 14)

include_directories(Castlevania)
include_directories(Castlevania/Library)
include_directories(Castlevania/Library/Inc)

add_executable(Castlevania
        Castlevania/Library/Inc/audiodefs.h
        Castlevania/Library/Inc/comdecl.h
        Castlevania/Library/Inc/D2D1.h
        Castlevania/Library/Inc/D2D1Helper.h
        Castlevania/Library/Inc/D2DBaseTypes.h
        Castlevania/Library/Inc/D2Derr.h
        Castlevania/Library/Inc/D3D10.h
        Castlevania/Library/Inc/D3D10_1.h
        Castlevania/Library/Inc/D3D10_1shader.h
        Castlevania/Library/Inc/D3D10effect.h
        Castlevania/Library/Inc/d3d10misc.h
        Castlevania/Library/Inc/d3d10sdklayers.h
        Castlevania/Library/Inc/D3D10shader.h
        Castlevania/Library/Inc/D3D11.h
        Castlevania/Library/Inc/D3D11SDKLayers.h
        Castlevania/Library/Inc/D3D11Shader.h
        Castlevania/Library/Inc/d3d9.h
        Castlevania/Library/Inc/d3d9caps.h
        Castlevania/Library/Inc/d3d9types.h
        Castlevania/Library/Inc/D3Dcommon.h
        Castlevania/Library/Inc/D3Dcompiler.h
        Castlevania/Library/Inc/D3DCSX.h
        Castlevania/Library/Inc/D3DX10.h
        Castlevania/Library/Inc/d3dx10async.h
        Castlevania/Library/Inc/D3DX10core.h
        Castlevania/Library/Inc/D3DX10math.h
        Castlevania/Library/Inc/D3DX10math.inl
        Castlevania/Library/Inc/D3DX10mesh.h
        Castlevania/Library/Inc/D3DX10tex.h
        Castlevania/Library/Inc/D3DX11.h
        Castlevania/Library/Inc/D3DX11async.h
        Castlevania/Library/Inc/D3DX11core.h
        Castlevania/Library/Inc/D3DX11tex.h
        Castlevania/Library/Inc/d3dx9.h
        Castlevania/Library/Inc/d3dx9anim.h
        Castlevania/Library/Inc/d3dx9core.h
        Castlevania/Library/Inc/d3dx9effect.h
        Castlevania/Library/Inc/d3dx9math.h
        Castlevania/Library/Inc/d3dx9math.inl
        Castlevania/Library/Inc/d3dx9mesh.h
        Castlevania/Library/Inc/d3dx9shader.h
        Castlevania/Library/Inc/d3dx9shape.h
        Castlevania/Library/Inc/d3dx9tex.h
        Castlevania/Library/Inc/d3dx9xof.h
        Castlevania/Library/Inc/D3DX_DXGIFormatConvert.inl
        Castlevania/Library/Inc/Dcommon.h
        Castlevania/Library/Inc/dinput.h
        Castlevania/Library/Inc/dinputd.h
        Castlevania/Library/Inc/dsconf.h
        Castlevania/Library/Inc/dsetup.h
        Castlevania/Library/Inc/dsound.h
        Castlevania/Library/Inc/DWrite.h
        Castlevania/Library/Inc/dxdiag.h
        Castlevania/Library/Inc/DxErr.h
        Castlevania/Library/Inc/dxfile.h
        Castlevania/Library/Inc/DXGI.h
        Castlevania/Library/Inc/DXGIFormat.h
        Castlevania/Library/Inc/DXGIType.h
        Castlevania/Library/Inc/dxsdkver.h
        Castlevania/Library/Inc/gameux.h
        Castlevania/Library/Inc/PIXPlugin.h
        Castlevania/Library/Inc/rmxfguid.h
        Castlevania/Library/Inc/rmxftmpl.h
        Castlevania/Library/Inc/rpcsal.h
        Castlevania/Library/Inc/X3DAudio.h
        Castlevania/Library/Inc/xact3.h
        Castlevania/Library/Inc/xact3d3.h
        Castlevania/Library/Inc/xact3wb.h
        Castlevania/Library/Inc/XAPO.h
        Castlevania/Library/Inc/XAPOBase.h
        Castlevania/Library/Inc/XAPOFX.h
        Castlevania/Library/Inc/XAudio2.h
        Castlevania/Library/Inc/XAudio2fx.h
        Castlevania/Library/Inc/XDSP.h
        Castlevania/Library/Inc/XInput.h
        Castlevania/Library/Inc/xma2defs.h
        Castlevania/Library/Inc/xnamath.h
        Castlevania/Library/Inc/xnamathconvert.inl
        Castlevania/Library/Inc/xnamathmatrix.inl
        Castlevania/Library/Inc/xnamathmisc.inl
        Castlevania/Library/Inc/xnamathvector.inl
        Castlevania/Animation.cpp
        Castlevania/Animation.h
        Castlevania/AnimationFrame.cpp
        Castlevania/AnimationFrame.h
        Castlevania/AnimationManager.cpp
        Castlevania/AnimationManager.h
        Castlevania/BigCandle.h
        Castlevania/Boundary.cpp
        Castlevania/Boundary.h
        Castlevania/BoundaryFactory.cpp
        Castlevania/BoundaryFactory.h
        Castlevania/Box.h
        Castlevania/Candle.h
        Castlevania/CandleFactory.cpp
        Castlevania/CandleFactory.h
        Castlevania/Constants.h
        Castlevania/debug.cpp
        Castlevania/debug.h
        Castlevania/Enemy.cpp
        Castlevania/Enemy.h
        Castlevania/EnemyFactory.cpp
        Castlevania/EnemyFactory.h
        Castlevania/EnemyGhouls.cpp
        Castlevania/EnemyGhouls.h
        Castlevania/Game.cpp
        Castlevania/Game.h
        Castlevania/GameObject.cpp
        Castlevania/GameObject.h
        Castlevania/Grid.cpp
        Castlevania/Grid.h
        Castlevania/HUD.cpp
        Castlevania/HUD.h
        Castlevania/Item.cpp
        Castlevania/Item.h
        Castlevania/ItemDagger.h
        Castlevania/ItemFactory.cpp
        Castlevania/ItemFactory.h
        Castlevania/ItemHeart.cpp
        Castlevania/ItemHeart.h
        Castlevania/ItemWhip.h
        Castlevania/KeyboardHandler.h
        Castlevania/main.cpp
        Castlevania/main.h
        Castlevania/ObjectChangeStage.h
        Castlevania/resource.h
        Castlevania/SetTimeOut.cpp
        Castlevania/SetTimeOut.h
        Castlevania/Simon.cpp
        Castlevania/Simon.h
        Castlevania/SimonConstants.h
        Castlevania/SmallCandle.h
        Castlevania/Sprite.cpp
        Castlevania/Sprite.h
        Castlevania/SpriteManager.cpp
        Castlevania/SpriteManager.h
        Castlevania/Stage.cpp
        Castlevania/Stage.h
        Castlevania/stage1_castle.cpp
        Castlevania/stage1_castle.h
        Castlevania/StageConst.h
        Castlevania/StageManager.cpp
        Castlevania/StageManager.h
        Castlevania/Stair.cpp
        Castlevania/Stair.h
        Castlevania/SubWeapon.cpp
        Castlevania/SubWeapon.h
        Castlevania/SubWeaponAxe.cpp
        Castlevania/SubWeaponAxe.h
        Castlevania/SubWeaponBoomerang.cpp
        Castlevania/SubWeaponBoomerang.h
        Castlevania/SubWeaponDagger.h
        Castlevania/SubWeaponFactory.cpp
        Castlevania/SubWeaponFactory.h
        Castlevania/SubWeaponHolyWater.cpp
        Castlevania/SubWeaponHolyWater.h
        Castlevania/SweptAABB.cpp
        Castlevania/SweptAABB.h
        Castlevania/Territory.h
        Castlevania/TextureManager.cpp
        Castlevania/TextureManager.h
        Castlevania/TileConst.h
        Castlevania/TileMap.cpp
        Castlevania/TileMap.h
        Castlevania/tileMapInfo.h
        Castlevania/TilemapManager.cpp
        Castlevania/TilemapManager.h
        Castlevania/Timer.h
        Castlevania/Weapon.cpp
        Castlevania/Weapon.h
        Castlevania/Whip.cpp
        Castlevania/Whip.h
        Castlevania/WhipConst.h
        Castlevania/WhipItem.h)

include_directories("C:/Program Files (x86)/Microsoft DirectX SDK (June 2019)/Lib/x86")
target_link_libraries(Castlevania "C:\\Program Files (x86)\\Microsoft DirectX SDK (June 2010)\\Lib\\x86\\*")
target_link_libraries(Castlevania "C:\\Program Files (x86)\\Microsoft DirectX SDK (June 2010)\\Lib\\x86\\d3dx9.lib")
target_link_libraries(Castlevania "C:\\Program Files (x86)\\Microsoft DirectX SDK (June 2010)\\Lib\\x86\\d3d9.lib")
target_link_libraries(Castlevania "C:\\Program Files (x86)\\Microsoft DirectX SDK (June 2010)\\Lib\\x86\\dxguid.lib")
target_link_libraries(Castlevania "C:\\Program Files (x86)\\Microsoft DirectX SDK (June 2010)\\Lib\\x86\\dxerr.lib")
target_link_libraries(Castlevania "C:\\Program Files (x86)\\Microsoft DirectX SDK (June 2010)\\Lib\\x86\\dinput8.lib")
